[package]
name = "nc"
version = "0.1.0"
authors = ["Xargin <buaa.cch@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prettytable-rs = "^0.8"
reqwest = "0.10"
tokio = { version = "0.2", features = ["full"] }
serde_json = "1.0.41"
serde = "1.0.102"
serde_derive = "1.0.102"
futures = { version = "0.3", features = ["async-await"] }

